# pairwise-alignment

./: README.md  align.py  pyproject.toml
